[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/json_editor/json_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/json_editor/button.gd" type="Script" id=2]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="JSON" type="PanelContainer"]
margin_right = 118.0
margin_bottom = 41.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 111.0
margin_bottom = 34.0

[node name="Tools" type="HSplitContainer" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 22.0

[node name="Left" type="HBoxContainer" parent="VBoxContainer/Tools"]
margin_right = 64.0
margin_bottom = 22.0

[node name="Open File" type="Button" parent="VBoxContainer/Tools/Left"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "Load a JSON file from disk"
icon = SubResource( 2 )
flat = true
script = ExtResource( 2 )
icon_name = "Load"
tooltip = "Load a JSON file from disk"

[node name="Save File" type="Button" parent="VBoxContainer/Tools/Left"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
hint_tooltip = "Save contents to disk"
icon = SubResource( 2 )
flat = true
script = ExtResource( 2 )
icon_name = "Save"
tooltip = "Save contents to disk"

[node name="File Name" type="Label" parent="VBoxContainer/Tools/Left"]
margin_left = 64.0
margin_top = 4.0
margin_right = 64.0
margin_bottom = 18.0

[node name="Right" type="HBoxContainer" parent="VBoxContainer/Tools"]
margin_left = 76.0
margin_right = 104.0
margin_bottom = 22.0
alignment = 2

[node name="Close File" type="Button" parent="VBoxContainer/Tools/Right"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "Close files and discard any changes"
icon = SubResource( 2 )
flat = true
script = ExtResource( 2 )
icon_name = "Close"
tooltip = "Close files and discard any changes"

[node name="Tree" type="Tree" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 104.0
margin_bottom = 27.0
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close File Confirmation" type="ConfirmationDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 77.0
dialog_text = "There may have been changes, discard them?"

[node name="Error Dialog" type="AcceptDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 65.0
dialog_autowrap = true
[connection signal="pressed" from="VBoxContainer/Tools/Left/Open File" to="." method="_request_open_file"]
[connection signal="pressed" from="VBoxContainer/Tools/Left/Save File" to="." method="_request_save_file"]
[connection signal="pressed" from="VBoxContainer/Tools/Right/Close File" to="." method="_request_close_file"]
[connection signal="confirmed" from="Close File Confirmation" to="." method="_close_file"]
